manifestations/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-service
spec:
  selector:
    app: wil
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
